# spectrum

./: README.md  meson.build
src/: meson.build  spectrum-scheme.c  spectrum-scheme.h  spectrum-version.h.in  spectrum.h
